--- a/package.json
+++ b/package.json
@@ -18,24 +18,43 @@
     "lodash": ">=4.17.21"
   },
   "peerDependencies": {
-    "express": ">=4.18.2"
+    "@o2ter/i18n": ">=0.0.9",
+    "@o2ter/react-ui": ">=0.0.137",
+    "@o2ter/valid.js": ">=1.0.0",
+    "@o2ter/wireframe": ">=0.0.3",
+    "express": ">=4.18.2",
+    "proto.io": ">=0.0.22",
+    "react": ">=18.2.0",
+    "react-native-web": ">=0.18.9",
+    "sugax": ">=1.0.79"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@o2ter/i18n": "^0.0.9",
+    "@o2ter/react-ui": "^0.0.137",
+    "@o2ter/valid.js": "^1.0.0",
+    "@o2ter/wireframe": "^0.0.3",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "=13.3.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.191",
-    "express": "^4.18.2",
+    "@types/react": "^18.0.26",
+    "@types/react-native": "^0.71.3",
+    "babel-loader": "^9.1.2",
+    "proto.io": "^0.0.22",
     "rollup": "^3.10.0",
     "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-sass": "^1.12.17",
+    "sugax": "^1.0.79",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "webpack": "^5.76.0"
   }
 }
