--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "peerDependencies": {
     "@o2ter/i18n": ">=0.0.9",
+    "@o2ter/react-route": ">=0.0.59",
     "@o2ter/react-ui": ">=0.0.137",
     "@o2ter/valid.js": ">=1.0.0",
     "@o2ter/wireframe": ">=0.0.3",
@@ -35,6 +36,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@o2ter/i18n": "^0.0.9",
+    "@o2ter/react-route": "^0.0.59",
     "@o2ter/react-ui": "^0.0.137",
     "@o2ter/valid.js": "^1.0.0",
     "@o2ter/wireframe": "^0.0.3",
