--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./dist/*",
-    "rollup": "yarn clean && rollup -c"
+    "rollup": "yarn clean && rollup -c",
+    "watch:build": "react-booster -w",
+    "watch:test": "until [ -f ./test/dist/server.js ]; do sleep 1; done && nodemon --watch ./test/dist ./test/dist/server.js",
+    "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
   },
   "dependencies": {
     "lodash": ">=4.17.21"
@@ -30,12 +33,8 @@
     "sugax": ">=1.0.79"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
     "@o2ter/i18n": "^0.0.9",
+    "@o2ter/react-booster": "^0.0.9",
     "@o2ter/react-route": "^0.0.59",
     "@o2ter/react-ui": "^0.0.137",
     "@o2ter/valid.js": "^1.0.0",
@@ -49,14 +48,17 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-native": "^0.71.3",
-    "babel-loader": "^9.1.2",
     "proto.io": "^0.0.23",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-web": "^0.19.7",
     "rollup": "^3.10.0",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-sass": "^1.12.17",
     "sugax": "^1.0.79",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "webpack": "^5.76.0"
+    "typescript": "^4.9.4"
   }
 }
