--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "watch:test": "until [ -f ./test/dist/server.js ]; do sleep 1; done && nodemon --watch ./test/dist ./test/dist/server.js",
     "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
   },
-  "dependencies": {
-    "lodash": ">=4.17.21"
-  },
   "peerDependencies": {
     "@o2ter/i18n": ">=0.0.9",
     "@o2ter/react-route": ">=0.0.59",
@@ -27,6 +24,7 @@
     "@o2ter/valid.js": ">=1.0.0",
     "@o2ter/wireframe": ">=0.0.3",
     "express": ">=4.18.2",
+    "lodash": ">=4.17.21",
     "proto.io": ">=0.0.23",
     "react": ">=18.2.0",
     "react-native-web": ">=0.18.9",
@@ -48,6 +46,7 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-native": "^0.71.3",
+    "lodash": "^4.17.21",
     "proto.io": "^0.0.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
