--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "scripts": {
     "clean": "rm -rf ./dist/*",
     "rollup": "yarn clean && rollup -c",
-    "watch:build": "react-booster -w",
-    "watch:test": "until [ -f ./test/dist/server.js ]; do sleep 1; done && nodemon --watch ./test/dist ./test/dist/server.js",
-    "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
+    "test": "cd test && yarn test",
+    "postinstall": "cd test && yarn install"
   },
   "peerDependencies": {
     "@o2ter/i18n": ">=0.0.9",
@@ -32,7 +31,6 @@
   },
   "devDependencies": {
     "@o2ter/i18n": "^0.0.9",
-    "@o2ter/react-booster": "^0.0.9",
     "@o2ter/react-route": "^0.0.59",
     "@o2ter/react-ui": "^0.0.137",
     "@o2ter/valid.js": "^1.0.0",
