--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rm -rf ./dist/*",
     "rollup": "yarn clean && rollup -c",
     "watch:build": "react-booster -w",
-    "watch:test": "cd ./test && until [ -f ./dist/server.js ]; do sleep 1; done && nodemon --watch ./dist ./dist/server.js",
+    "watch:test": "until [ -f ./test/dist/server.js ]; do sleep 1; done && nodemon --watch ./test/dist ./test/dist/server.js",
     "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
   },
   "peerDependencies": {
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@o2ter/i18n": "^0.0.10",
-    "@o2ter/react-booster": "^0.0.12",
+    "@o2ter/react-booster": "^0.0.13",
     "@o2ter/react-route": "^0.0.59",
     "@o2ter/react-ui": "^0.0.148",
     "@o2ter/valid.js": "^1.0.2",
