--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "sugax": "^1.0.84",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1"
   }
 }
