--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "=13.3.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/d3-dsv": "^3.0.2",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
