--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "sugax": ">=1.0.84"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.14",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.18.6",
     "@o2ter/i18n": "^0.0.10",
     "@o2ter/react-booster": "^0.0.33",
     "@o2ter/react-ui": "^0.0.223",
