--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
+    "moduleSuffixes": [".web", ""]
   },
   "exclude": [
     "**/dist/*",
