--- a/package.json
+++ b/package.json
@@ -29,41 +29,41 @@
     "lodash": ">=4.17.21",
     "proto.io": ">=0.0.83",
     "react": ">=18.2.0",
-    "react-native-web": ">=0.18.9",
     "sugax": ">=1.0.92"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
+    "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.22.14",
-    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@o2ter/i18n": "^0.0.10",
     "@o2ter/react-booster": "^0.0.62",
     "@o2ter/react-ui": "^0.0.328",
     "@o2ter/valid.js": "^1.0.3",
     "@o2ter/wireframe": "^0.0.54",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-babel": "^6.0.0",
+    "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "=13.3.0",
-    "@rollup/plugin-typescript": "^11.1.3",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/d3-dsv": "^3.0.2",
     "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.191",
-    "@types/react": "^18.2.21",
-    "@types/react-native": "^0.72.2",
+    "@types/lodash": "^4.14.186",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.71.3",
+    "babel-loader": "^9.1.2",
     "lodash": "^4.17.21",
     "proto.io": "^0.0.83",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-web": "^0.19.8",
-    "rollup": "^3.28.1",
-    "rollup-plugin-dts": "^6.0.1",
-    "rollup-plugin-sass": "^1.12.17",
+    "rollup": "^3.10.0",
+    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-sass": "^1.12.21",
     "sugax": "^1.0.93",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "tslib": "^2.4.0",
+    "typescript": "^4.8.4"
   }
 }
