--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@o2ter/react-ui": ">=0.0.350",
     "@o2ter/valid.js": ">=1.0.6",
     "@o2ter/wireframe": ">=0.0.58",
-    "express": ">=4.18.2",
+    "express": ">=4.19.2",
     "lodash": ">=4.17.21",
     "proto.io": ">=0.0.104",
     "react": ">=18.2.0",
@@ -53,6 +53,7 @@
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.71.3",
     "babel-loader": "^9.1.2",
+    "express": "^4.19.2",
     "lodash": "^4.17.21",
     "proto.io": "^0.0.104",
     "react": "^18.2.0",
