--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^6.2.1"
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@o2ter/server-js": "^0.0.2"
   },
   "peerDependencies": {
     "@o2ter/i18n": ">=0.0.10",
@@ -37,7 +38,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@o2ter/i18n": "^0.0.10",
-    "@o2ter/react-booster": "^0.0.79",
+    "@o2ter/react-booster": "^0.0.80",
     "@o2ter/react-ui": "^0.0.360",
     "@o2ter/valid.js": "^1.0.6",
     "@o2ter/wireframe": "^0.0.58",
