--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^6.2.1",
-    "@o2ter/server-js": "^0.0.2"
+    "@codemirror/lang-javascript": "^6.2.1"
   },
   "peerDependencies": {
     "@o2ter/i18n": ">=0.0.10",
@@ -41,6 +40,7 @@
     "@o2ter/i18n": "^0.0.10",
     "@o2ter/react-booster": "^0.0.82",
     "@o2ter/react-ui": "^0.0.365",
+    "@o2ter/server-js": "^0.0.10",
     "@o2ter/valid.js": "^1.0.6",
     "@o2ter/wireframe": "^0.0.59",
     "@rollup/plugin-babel": "^6.0.0",
