--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "sugax": ">=1.0.93"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@loadable/babel-plugin": "^5.16.1",
     "@o2ter/i18n": "^0.0.10",
     "@o2ter/react-booster": "^0.0.82",
@@ -41,28 +41,28 @@
     "@o2ter/valid.js": "^1.0.6",
     "@o2ter/wireframe": "^0.0.60",
     "@rollup/plugin-babel": "^6.0.0",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "=13.3.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/d3-dsv": "^3.0.2",
     "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.186",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.71.3",
+    "@types/lodash": "^4.17.4",
+    "@types/react": "^18.3.2",
+    "@types/react-native": "^0.73.0",
     "babel-loader": "^9.1.2",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
     "proto.io": "^0.0.114",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native-reanimated": "^3.4.2",
-    "react-native-web": "^0.19.8",
-    "rollup": "^3.10.0",
-    "rollup-plugin-dts": "^5.1.1",
-    "rollup-plugin-sass": "^1.12.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-web": "^0.19.11",
+    "rollup": "^4.17.2",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-sass": "^1.12.22",
     "sugax": "^1.0.97",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.4.5"
   }
 }
