--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "react-dom": "^18.3.1",
     "react-native-reanimated": "^3.11.0",
     "react-native-web": "^0.19.11",
+    "react-router-dom": "^6.26.1",
     "rollup": "^4.17.2",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-sass": "^1.12.22",
     "sugax": "^1.0.102",
     "tslib": "^2.4.0",
     "typescript": "^5.4.5"
-  }
+  },
+  "dependencies": {}
 }
