--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean": "rm -rf ./dist/*",
     "rollup": "yarn clean && rollup -c",
     "watch:build": "react-booster -w",
-    "watch:test": "until [ -f ./test/dist/server.js ]; do sleep 1; done && nodemon --watch ./test/dist ./test/dist/server.js",
-    "test": "rm -rf ./test/dist/* && npm-run-all --parallel watch:*"
+    "watch:test": "until [ -f ./test/dist/server.js ]; do sleep 1; done && npx nodemon --watch ./test/dist ./test/dist/server.js",
+    "test": "rm -rf ./test/dist/* && npx npm-run-all --parallel watch:*"
   },
   "peerDependencies": {
     "@o2ter/i18n": ">=0.0.10",
