--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "divermeter",
+  "name": "divermeter-react",
   "version": "1.0.0",
   "main": "dist/index",
   "module": "dist/index",
@@ -7,7 +7,7 @@
   "files": [
     "dist/*"
   ],
-  "repository": "https://github.com/o2ter/divermeter.git",
+  "repository": "https://github.com/o2ter/divermeter-react.git",
   "author": "Susan Cheng <susan.doggie@gmail.com>",
   "license": "MIT",
   "scripts": {
